--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div id="container"></div>
+    <div id="result"></div>
     <script src="script.js"></script>
 </body>
 </html>
